# CourseWork4

./: main.py  pyproject.toml
data/: vacancies.json
src/: api.py  fileVacancy.py  saving.py  vacancies.py
tests/: test_api.py  test_vacancies.py
